syntax = "proto3";

option csharp_namespace = "Crib2023.Backend.Services.FileStorage.App.Grpc.Protos";

package FileStorage;

service Article {
  rpc GetItem (ArticleItemGetRequest) returns (ArticleItemGetReply);
}

// GetItem Request

message ArticleItemGetRequest {
  ArticleItemGetRequestInput input = 1;
  string operation_code = 2;
}

message ArticleItemGetRequestInput {
  int64 id = 1;
  string title = 2;
}

// GetItem Reply

message ArticleItemGetReply {
  bool is_ok = 1;
  string operation_code = 2;
  repeated string error_messages = 3;
  repeated string success_messages = 4;
  repeated string warning_messages = 5;  
  ArticleItemGetReplyOutput output = 6;
}

message ArticleItemGetReplyOutput {
  ArticleItemGetReplyOutputEntity entity = 1;
  bool is_not_found = 2;
}

message ArticleItemGetReplyOutputEntity {
  ArticleItemGetReplyOutputEntityData data = 1;
  repeated ArticleItemGetReplyOutputEntityPathItem path = 2;
}

message ArticleItemGetReplyOutputEntityData {
  int64 id = 1;
  string title = 2;
}

message ArticleItemGetReplyOutputEntityPathItem {
  int64 id = 1;
  string name = 2;
}
